--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
     "license": "ISC",
     "dependencies": {
         "cors": "^2.8.5",
-        "dotenv": "^16.1.4",
+        "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "multer": "^1.4.5-lts.1",
-        "mysql2": "^3.3.3",
-        "nodemon": "^3.0.1",
+        "mysql2": "^3.6.0",
         "read-excel-file": "^5.6.1",
-        "sequelize": "^6.32.0"
+        "sequelize": "^6.32.1"
     },
     "devDependencies": {
-        "@babel/core": "^7.22.1",
-        "@babel/node": "^7.22.1",
-        "@babel/preset-env": "^7.22.4",
-        "babel-plugin-module-resolver": "^5.0.0"
+        "@babel/core": "^7.22.10",
+        "@babel/node": "^7.22.10",
+        "@babel/preset-env": "^7.22.10",
+        "babel-plugin-module-resolver": "^5.0.0",
+        "nodemon": "^3.0.1"
     }
 }
