--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "ejs": "^3.1.9",
         "express": "^4.18.2",
+        "express-ejs-layouts": "^2.5.1",
+        "moment": "^2.29.4",
         "multer": "^1.4.5-lts.1",
         "mysql2": "^3.6.0",
         "read-excel-file": "^5.6.1",
-        "sequelize": "^6.32.1"
+        "sequelize": "^6.32.1",
+        "slugify": "^1.6.6"
     },
     "devDependencies": {
         "@babel/core": "^7.22.10",
