--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "start": "nodemon --exec babel-node src/index.js",
-        "watch": "node-sass -w src/scss/ -o src/public/static/css/",
+        "watch": "node-sass -w src/scss -o src/public/static/css",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
