--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon --exec babel-node src/index.js",
+        "start": "nodemon --inspect --exec babel-node src/index.js",
         "watch": "node-sass -w src/scss/ -o src/public/static/css/",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
