--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "ejs": "^3.1.9",
+        "exceljs": "^4.3.0",
         "express": "^4.18.2",
         "moment": "^2.29.4",
         "multer": "^1.4.5-lts.1",
