--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,7 @@
                     "~": "./src"
                 }
             }
-        ]
+        ],
+        ["@babel/plugin-transform-runtime"]
     ]
 }
