--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@babel/preset-env": "^7.22.10",
         "babel-plugin-module-resolver": "^5.0.0",
         "node-sass": "^9.0.0",
+        "node-windows": "^1.0.0-beta.8",
         "nodemon": "^3.0.1"
     }
 }
