--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "multer": "^1.4.5-lts.1",
         "mysql2": "^3.6.0",
         "read-excel-file": "^5.6.1",
+        "sanitize-html": "^2.11.0",
         "sequelize": "^6.32.1",
         "slugify": "^1.6.6"
     },
